--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logo-box"><i data-lucide="layout"></i></div>
                     <div class="flex flex-col gap-1">
 			            <h1 class="text-xl font-black uppercase italic leading-none">Collage Maker</h1>
-			            <a href="https://x.com/goldenlasttile" class="text-sm text-gray-500 hover:text-blue-600 transition-colors">
+			            <a href="https://x.com/goldenlasttile" target="_blank" class="text-sm text-gray-500 hover:text-blue-600 transition-colors">
 			                @goldenlasttile
 			            </a>
 			        </div>
